--- a/drools-framework-rest-guvnor/pom.xml
+++ b/drools-framework-rest-guvnor/pom.xml
@@ -76,6 +76,7 @@
         <dependency>
             <groupId>org.chtijbug.drools</groupId>
             <artifactId>kie-drools-framework-rest-client</artifactId>
+            <scope>provided</scope>
             <version>${project.version}</version>
         </dependency>
 
