--- a/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/pom.xml
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/pom.xml
@@ -995,6 +995,8 @@
         <dependency>
             <groupId>org.uberfire</groupId>
             <artifactId>uberfire-client-api</artifactId>
+
+            <scope>provided</scope>
             <version>${version.org.uberfire}</version>
         </dependency>
         <dependency>
@@ -1245,6 +1247,7 @@
         <dependency>
             <groupId>org.jboss.errai</groupId>
             <artifactId>errai-data-binding</artifactId>
+            <scope>provided</scope>
             <version>3.2.3.Final</version>
         </dependency>
 
@@ -1271,6 +1274,8 @@
         <dependency>
             <groupId>org.jboss.errai</groupId>
             <artifactId>errai-javax-enterprise</artifactId>
+            <scope>provided</scope>
+
             <version>3.2.3.Final</version>
         </dependency>
         <dependency>
