Branding the workbench to chtijbug part 1 : the worbench app

--- a/drools-framework-kie-wb-parent/drools-framework-kie-wb-wars/src/main/assembly/tomcat7/WEB-INF/web.xml
+++ b/drools-framework-kie-wb-parent/drools-framework-kie-wb-wars/src/main/assembly/tomcat7/WEB-INF/web.xml
@@ -162,7 +162,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>DTableXLSFileServlet</servlet-name>
-    <url-pattern>/org.kie.workbench.drools.KIEDroolsWebapp/dtablexls/file</url-pattern>
+    <url-pattern>/org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/dtablexls/file</url-pattern>
   </servlet-mapping>
 
   <servlet>
@@ -179,7 +179,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>ArchiveServlet</servlet-name>
-    <url-pattern>/org.kie.workbench.drools.KIEDroolsWebapp/archive</url-pattern>
+    <url-pattern>/org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/archive</url-pattern>
   </servlet-mapping>
 
   <servlet>
@@ -196,7 +196,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>ScoreCardFileServlet</servlet-name>
-    <url-pattern>/org.kie.workbench.drools.KIEDroolsWebapp/scorecardxls/file</url-pattern>
+    <url-pattern>/org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/scorecardxls/file</url-pattern>
   </servlet-mapping>
 
   <servlet>
@@ -213,7 +213,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>UberfireFileUploadServlet</servlet-name>
-    <url-pattern>/org.kie.workbench.drools.KIEDroolsWebapp/defaulteditor/upload/*</url-pattern>
+    <url-pattern>/org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/defaulteditor/upload/*</url-pattern>
   </servlet-mapping>
 
   <servlet>
@@ -230,7 +230,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>UberfireFileDownloadServlet</servlet-name>
-    <url-pattern>/org.kie.workbench.drools.KIEDroolsWebapp/defaulteditor/download/*</url-pattern>
+    <url-pattern>/org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/defaulteditor/download/*</url-pattern>
   </servlet-mapping>
 
   <servlet>
@@ -284,7 +284,7 @@
     </filter-class>
     <init-param>
       <param-name>redirectTo</param-name>
-      <param-value>/org.kie.workbench.drools.KIEDroolsWebapp</param-value>
+      <param-value>/org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp</param-value>
     </init-param>
   </filter>
   <filter-mapping>
@@ -593,11 +593,11 @@ See http://www.w3.org/TR/SVG/intro.html#MIMEType. -->
   <security-constraint>
     <web-resource-collection>
       <web-resource-name>download</web-resource-name>
-      <url-pattern>/org.kie.workbench.drools.KIEDroolsWebapp/archive</url-pattern>
-      <url-pattern>/org.kie.workbench.drools.KIEDroolsWebapp/defaulteditor/upload/*</url-pattern>
-      <url-pattern>/org.kie.workbench.drools.KIEDroolsWebapp/defaulteditor/download/*</url-pattern>
-      <url-pattern>/org.kie.workbench.drools.KIEDroolsWebapp/dtablexls/file</url-pattern>
-      <url-pattern>/org.kie.workbench.drools.KIEDroolsWebapp/scorecardxls/file</url-pattern>
+      <url-pattern>/org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/archive</url-pattern>
+      <url-pattern>/org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/defaulteditor/upload/*</url-pattern>
+      <url-pattern>/org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/defaulteditor/download/*</url-pattern>
+      <url-pattern>/org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/dtablexls/file</url-pattern>
+      <url-pattern>/org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/scorecardxls/file</url-pattern>
     </web-resource-collection>
     <auth-constraint>
       <role-name>admin</role-name>
@@ -609,7 +609,7 @@ See http://www.w3.org/TR/SVG/intro.html#MIMEType. -->
     <web-resource-collection>
       <web-resource-name>console</web-resource-name>
       <url-pattern>/kie-drools-wb.html</url-pattern>
-      <url-pattern>/org.kie.workbench.drools.KIEDroolsWebapp/*</url-pattern>
+      <url-pattern>/org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp/*</url-pattern>
       <url-pattern>*.erraiBus</url-pattern>
       <url-pattern>/resourceList</url-pattern>
       <url-pattern>/editor</url-pattern>
