Branding the workbench to chtijbug part 1 : the worbench app

--- a/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/pom.xml
+++ b/drools-framework-kie-wb-parent/kie-drools-framework-wb-webapp/pom.xml
@@ -1648,7 +1648,7 @@
                             -Dorg.uberfire.async.executor.safemode=true
                         </extraJvmArgs>
                         <draftCompile>true</draftCompile>
-                        <module>org.chtijbug.workbench.drools.KIEChtijbugDroolsWebapp</module>
+                        <module>org.chtijbug.workbench.drools.FastCompiledKIEChtijbugDroolsWebapp</module>
                         <logLevel>INFO</logLevel>
                         <noServer>false</noServer>
                         <server>org.jboss.errai.cdi.server.gwt.EmbeddedWildFlyLauncher</server>
